<resources>
    <string name="app_name">Siriso</string>

    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="newAccount">New to Siriso?</string>

    <string name="image">image</string>
    <string name="text">texte</string>
    <string name="number">0</string>

    <string name="coError">Erreur de connexion</string>
</resources>